--- a/0920/메뉴만들기/style.css
+++ b/0920/메뉴만들기/style.css
@@ -2,6 +2,42 @@
   display: none;
 }
 
+
+.black-bg{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 30px;
+
+  display: none;
+  /* visibility: hidden;
+  opacity: 0;
+  height: 0%;
+  transition: all 1s;
+  overflow: hidden; */
+}
+
+.visi{
+  visibility: visible;
+  height: 100%;
+  opacity: 1;
+  overflow: hidden;
+}
+
 .show{
   display: block;
+}
+
+.white-bg{
+  width: 80%;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+
+.dark{
+  background-color: black;
+  color: white;
 }
